update middleware
