# internal/handler/handler.go
@@ -10,6 +10,7 @@ import (
 
 	"github.com/VTerenya/employees/internal"
 	"github.com/VTerenya/employees/internal/errors"
+	"github.com/google/uuid"
 	"github.com/shopspring/decimal"
 )
 
@@ -33,11 +34,6 @@ func NewHandler(service Service) *Hand {
 
 func (h *Hand) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("content-type", "application/json")
-	err := h.service.LogCorrelationID(r)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
 	switch {
 	case r.Method == http.MethodGet && positionsRe.MatchString(r.URL.String()):
 		h.GetPositions(w, r)
@@ -95,7 +91,7 @@ func (h *Hand) GetPositions(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	positions, err := h.service.GetPositions(int(limit), int(offset))
+	positions, err := h.service.GetPositions(r.Context(), int(limit), int(offset))
 	if err != nil {
 		if errs.Is(err, errors.NotFound()) {
 			http.Error(w, err.Error(), http.StatusNotFound)
@@ -131,7 +127,7 @@ func (h *Hand) GetEmployees(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	employees, err := h.service.GetEmployees(int(limit), int(offset))
+	employees, err := h.service.GetEmployees(r.Context(), int(limit), int(offset))
 	if err != nil {
 		if errs.Is(err, errors.NotFound()) {
 			http.Error(w, err.Error(), http.StatusNotFound)
@@ -157,7 +153,7 @@ func (h *Hand) GetPosition(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, "bad request", http.StatusBadRequest)
 		return
 	}
-	p, err := h.service.GetPosition(matches[1])
+	p, err := h.service.GetPosition(r.Context(), matches[1])
 	if err != nil {
 		if errs.Is(err, errors.NotFound()) {
 			http.Error(w, err.Error(), http.StatusNotFound)
@@ -183,7 +179,7 @@ func (h *Hand) GetEmployee(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, errors.BadRequest().Error(), http.StatusBadRequest)
 		return
 	}
-	e, err := h.service.GetEmployee(matches[1])
+	e, err := h.service.GetEmployee(r.Context(), matches[1])
 	if err != nil {
 		if errs.Is(err, errors.NotFound()) {
 			http.Error(w, err.Error(), http.StatusNotFound)
@@ -213,7 +209,7 @@ func (h *Hand) CreatePosition(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, errors.BadRequest().Error(), http.StatusBadRequest)
 		return
 	}
-	err := h.service.CreatePosition(&p)
+	err := h.service.CreatePosition(r.Context(), &p)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
@@ -235,11 +231,11 @@ func (h *Hand) CreateEmployee(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	if e.LasName == "" || e.FirstName == "" || e.Position == "" {
+	if e.LasName == "" || e.FirstName == "" || e.PositionID == uuid.Nil {
 		http.Error(w, errors.BadRequest().Error(), http.StatusBadRequest)
 		return
 	}
-	err := h.service.CreateEmployee(&e)
+	err := h.service.CreateEmployee(r.Context(), &e)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
@@ -261,7 +257,7 @@ func (h *Hand) UpdatePosition(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	err := h.service.UpdatePosition(&p)
+	err := h.service.UpdatePosition(r.Context(), &p)
 	if err != nil {
 		if errs.Is(err, errors.BadRequest()) {
 			http.Error(w, err.Error(), http.StatusBadRequest)
@@ -287,11 +283,14 @@ func (h *Hand) UpdateEmployee(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	err := h.service.UpdateEmployee(&e)
+	err := h.service.UpdateEmployee(r.Context(), &e)
 	if err != nil {
 		if errs.Is(err, errors.BadRequest()) {
 			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
+		}
+		if errs.Is(err, errors.PositionIsNotExists()) {
+			http.Error(w, err.Error(), http.StatusBadRequest)
 		}
 		http.Error(w, err.Error(), http.StatusNotFound)
 		return
@@ -309,7 +308,7 @@ func (h *Hand) UpdateEmployee(w http.ResponseWriter, r *http.Request) {
 
 func (h *Hand) DeletePosition(w http.ResponseWriter, r *http.Request) {
 	deleteID := positionRe.FindStringSubmatch(r.URL.Path)[1]
-	err := h.service.DeletePosition(deleteID)
+	err := h.service.DeletePosition(r.Context(), deleteID)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusNotFound)
 		return
@@ -326,12 +325,8 @@ func (h *Hand) DeletePosition(w http.ResponseWriter, r *http.Request) {
 }
 
 func (h *Hand) DeleteEmployee(w http.ResponseWriter, r *http.Request) {
-	err := h.service.LogCorrelationID(r)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-	}
 	deleteID := employeeRe.FindStringSubmatch(r.URL.Path)[1]
-	err = h.service.DeleteEmployee(deleteID)
+	err := h.service.DeleteEmployee(r.Context(), deleteID)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusNotFound)
 		return
